# bindgen-bug-mw

./: CMakeLists.txt  readme.md
rustbind/: Cargo.toml  build.rs  wrapper.h
rustbind/src/: lib.rs
src/: CMakeLists.txt  foo.h
